src/test/ui/variance/variance-use-covariant-struct-1.stderr
error: lifetime may not live long enough
  --> $DIR/variance-use-covariant-struct-1.rs:10:5
   |
LL | fn foo<'min,'max>(v: SomeStruct<&'min ()>)
   |        ---- ---- lifetime `'max` defined here
   |        |
   |        lifetime `'min` defined here
...
LL |     v
   |     ^ function was supposed to return data with lifetime `'max` but it is returning data with lifetime `'min`
   |
   = help: consider adding the following bound: `'min: 'max`

error: aborting due to previous error

